--- a/FSM/FSM.qsf
+++ b/FSM/FSM.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY FSM_Calculator_Dev
+set_global_assignment -name TOP_LEVEL_ENTITY FSM_Calculator_ALU
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:01:03  NOVEMBER 17, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -67,6 +67,8 @@ set_global_assignment -name VERILOG_FILE FSM_Calculator.v
 set_global_assignment -name VERILOG_FILE FSM_Calculator_tb.v
 set_global_assignment -name VERILOG_FILE FSM_Calculator_Dev_tb.v
 set_global_assignment -name VERILOG_FILE FSM_Calculator_Dev.v
+set_global_assignment -name VERILOG_FILE FSM_Calculator_ALU.v
+set_global_assignment -name VERILOG_FILE FSM_Calculator_ALU_tb.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
